--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/inventory
+MONGO_URI=mongodb+srv://koel_inventory:GImBwY6a5y1nyh1t@cluster0.xbtdy.mongodb.net/
 # DB_PASS=GImBwY6a5y1nyh1t
 # DB_USER=koel_inventory
