added some new api's

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGO_URI=mongodb+srv://koel_inventory:GImBwY6a5y1nyh1t@cluster0.xbtdy.mongodb.net/
+# MONGO_URI=mongodb+srv://koel_inventory:GImBwY6a5y1nyh1t@cluster0.xbtdy.mongodb.net/
+MONGO_URI=mongodb://localhost:27017/inventory
 # DB_PASS=GImBwY6a5y1nyh1t
 # DB_USER=koel_inventory
